# iceblink

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: sync-ci.yml
app/: .env.example  app.json  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
app/app/: index.tsx
app/app-example/app/(tabs)/: index.tsx
app/src/: utils.ts
app/src/app/: +not-found.tsx  _layout.tsx  index.tsx
app/src/app/(auth)/: _layout.tsx  server.tsx  signin.tsx  unlock.tsx
app/src/components/: Feature.tsx  Logo.tsx  TextLogo.tsx  TotpCard.tsx
app/src/components/ui/: Button.tsx  Input.tsx  Tip.tsx
app/src/primitives/: atoms.ts
app/src/utils/: padding.ts
sync/: .dockerignore  .env.example  Cargo.toml  Dockerfile
sync/.cargo/: config.toml
sync/benches/: user_checksum.rs
sync/migrations/: 20241012093439_init.sql  20241115143944_codes.sql  20241116171453_user_codes_cascade.sql  20241116172601_code_contents_again.sql
sync/src/: auth.rs  cli.rs  icons.rs  lib.rs  main.rs  server.rs  utils.rs
sync/src/models/: codes.rs  mod.rs  user.rs
sync/src/routes/v1/: auth.rs  codes.rs  index.rs  misc.rs  mod.rs  user.rs  users.rs
sync/src/static/: landing.html
sync/src/static/.well-known/: security.txt
sync/static/: landing.html
sync/tests/: auth.rs  codes.rs  index.rs  misc.rs  user.rs
sync/tests/common/: matchers.rs  mod.rs
sync/tests/fixtures/: codes.sql  users.sql
