[package]
authors = ["Erb3", "Snowflake-Software"]
description = "Sync and backup service for the Iceblink 2FA manager"
edition = "2021"
name = "iceblink-sync"
version = "0.1.0"

[dependencies]
axum = {version = "0.7.9", features = ["macros"]}
axum-extra = {version = "0.9.6", features = ["cookie"]}
axum-macros = "0.4.2"
base16ct = {version = "0.2.0", features = ["alloc"]}
bon = "3.2.0"
bytes = "1.9.0"
chrono = "0.4.38"
clap = {version = "4.5.21", features = ["derive", "env"]}
crc32fast = "1.4.2"
dotenvy = {version = "0.15.7"}
jsonwebtoken = "9.3.0"
memory-serve = "0.6.0"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = {version = "0.12.9", features = ["json", "rustls-tls"], default-features = false}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
serde_with = "3.11.0"
sha2 = "0.10.8"
sqlx = {version = "0.8", features = ["chrono", "derive", "macros", "migrate", "runtime-tokio", "sqlite"]}
tokio = {version = "1.42.0", features = ["full"]}
tower = "0.5.1"
tower-http = {version = "0.6.2", features = ["compression-full", "cors", "timeout", "trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = {version = "5.2.0", features = ["axum_extras"]}
utoipa-axum = "0.1.2"
utoipa-swagger-ui = {version = "8.0.3", features = ["axum", "vendored"]}

[dev-dependencies]
criterion = {version = "0.5"}

[[bench]]
harness = false
name = "user_checksum"

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev.package.sqlx-macros]
opt-level = 3 # Recommended to improve compile times
